--- a/app/src/main/res/layout/location_item.xml
+++ b/app/src/main/res/layout/location_item.xml
@@ -19,7 +19,7 @@
             android:id="@+id/buildingImage"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:contentDescription="location image"
+            android:contentDescription="@string/location_image"
             android:src="@mipmap/ic_launcher"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,11 +29,23 @@
 
         <TextView
             android:id="@+id/locationTextView"
+            android:layout_width="261dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/coordinates"
+            android:textSize="16sp"
+            app:layout_constraintBaseline_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/azimuthTextView" />
+
+        <TextView
+            android:id="@+id/descriptionTextView"
             android:layout_width="262dp"
             android:layout_height="21dp"
             android:layout_weight="1"
-            android:text="location : "
+            android:text="@string/description"
             android:textSize="16sp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buildingName"
@@ -45,7 +57,7 @@
             android:layout_width="261dp"
             android:layout_height="23dp"
             android:layout_weight="1"
-            android:text="Azimuth : "
+            android:text="@string/azimuth"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/locationTextView"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +68,7 @@
             android:id="@+id/buildingName"
             android:layout_width="278dp"
             android:layout_height="27dp"
-            android:text="name"
+            android:text="@string/name"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
