--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -63,9 +63,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sign in"
+                android:text="@string/sign_in"
                 android:textColor="@color/white"
-                android:textSize="40dp"
+                android:textSize="40sp"
                 android:textStyle="italic"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -74,9 +74,9 @@
                 android:id="@+id/login_error"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginBottom="10dp"
-                android:text="*Invalid email or password, please try again"
+                android:text="@string/invalid_email_or_password_please_try_again"
                 android:textColor="@color/red"
                 android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@id/email_text_input"
@@ -87,7 +87,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="-110dp"
-                android:hint="Email"
+                android:hint="@string/email"
                 android:imeOptions="actionDone"
                 android:textColorHint="@color/black"
                 app:boxBackgroundColor="@color/btnsAndInput"
@@ -118,7 +118,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:hint="Password"
+                android:hint="@string/password"
                 android:imeOptions="actionDone"
                 android:textColorHint="@color/black"
                 app:boxBackgroundColor="@color/btnsAndInput"
@@ -149,7 +149,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:backgroundTint="@color/btnsAndInput"
-                android:text="Login"
+                android:text="@string/login"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -169,9 +169,9 @@
                 android:id="@+id/register_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Dont have an account?"
+                android:text="@string/dont_have_an_account"
                 android:textColor="@color/white"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -180,8 +180,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="Register"
-                android:textSize="20dp"
+                android:text="@string/register"
+                android:textSize="20sp"
                 android:textColor="@color/blue_link"
                 android:textStyle="italic"
                 app:layout_constraintStart_toEndOf="@id/register_text"
