--- a/app/src/main/res/layout/add_location.xml
+++ b/app/src/main/res/layout/add_location.xml
@@ -12,8 +12,8 @@
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/baseline_arrow_forward_ios_24"
-        android:drawableTint="@color/white"
+        app:drawableStartCompat="@drawable/baseline_arrow_forward_ios_24"
+        app:drawableTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Location 1.5"
+        android:text= "@string/admin_manager"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:text="Accuracy"
+        android:text="@string/accuracy"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -46,8 +46,8 @@
     android:id="@+id/pick_img_text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Pick an image"
-    android:textSize="20dp"
+    android:text="@string/pick_an_image"
+    android:textSize="20sp"
     android:layout_marginTop="15dp"
     app:layout_constraintTop_toBottomOf="@id/accuracy"
     app:layout_constraintStart_toStartOf="parent"
@@ -77,8 +77,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Name"
-        android:textSize="20dp"
+        android:text="@string/name"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view"
@@ -88,8 +88,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Coordinates"
-        android:textSize="20dp"
+        android:text="@string/coordinates"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nameView"
@@ -99,8 +99,8 @@
         android:id="@+id/azimuthView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Azimuth"
-        android:textSize="20dp"
+        android:text="@string/azimuth"
+        android:textSize="18sp"
        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +112,7 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-       android:hint="Enter place name"
+       android:hint="@string/enter_place_name"
         app:hintTextColor="@color/btnsAndInput"
 
         app:boxStrokeColor="@color/btnsAndInput"
@@ -131,7 +131,7 @@
         android:id="@+id/btnSavePlace"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save data"
+        android:text="@string/save_data"
         android:backgroundTint="@color/btnsAndInput"
         android:textColor="@color/black"
         android:padding="10dp"
@@ -145,7 +145,7 @@
         android:id="@+id/btnViewList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View List"
+        android:text="@string/view_list"
         android:textColor="@color/black"
         android:padding="10dp"
         android:layout_marginTop="20dp"
