--- a/app/src/main/res/layout/detail_location_info.xml
+++ b/app/src/main/res/layout/detail_location_info.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:drawableStart="@drawable/baseline_arrow_forward_ios_24"
+            app:drawableStartCompat="@drawable/baseline_arrow_forward_ios_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="Location Name"
+            android:text="@string/name"
             android:textColor="@color/gray"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="Location"
+            android:text="@string/coordinates"
             android:textColor="@color/gray"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="Azimuth"
+            android:text="@string/azimuth"
             android:textColor="@color/gray"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -68,23 +68,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:text="Description"
+            android:layout_marginStart="16dp"
+            android:text="@string/description"
             android:textColor="@color/gray"
             android:textSize="20sp"
-            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/location_name" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.767" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/item_detail_image"
             android:layout_width="300dp"
             android:layout_height="300dp"
-            android:contentDescription="location image"
+            android:contentDescription="@string/location_image"
             android:src="@mipmap/ic_launcher"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.422"
             app:shapeAppearanceOverlay="@style/RoundedImageView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
