--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -4,82 +4,95 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/mapupdate"
+    android:background="@drawable/map_update"
+    android:layoutDirection="ltr"
     tools:context="com.example.locations.UI.ui_activity.MapFragment">
+
+
+    <TextView
+        android:id="@+id/btnBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        app:drawableStartCompat="@drawable/baseline_arrow_back_ios_24"
+        app:drawableTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonFichmanGate"
         android:layout_width="65dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="345dp"
+        android:layout_height="30dp"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="37dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@+id/buttonstore"
-        app:layout_constraintEnd_toEndOf="@+id/buttonstore"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.781"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintVertical_bias="0.527"
         tools:visibility="invisible" />
 
     <Button
         android:id="@+id/buttonGolombGate"
         android:layout_width="29dp"
         android:layout_height="69dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="246dp"
         android:layout_marginBottom="276dp"
         android:background="@android:color/transparent"
         app:layout_constraintBottom_toTopOf="@+id/buttonbuilding5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonbuilding1"
+        app:layout_constraintHorizontal_bias="0.358"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintVertical_bias="0.681"
         tools:visibility="invisible" />
 
     <Button
         android:id="@+id/buttonHoffinGate"
         android:layout_width="62dp"
         android:layout_height="44dp"
-        android:layout_marginBottom="53dp"
         android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonbuilding8C"
-        app:layout_constraintStart_toStartOf="@+id/buttonbuilding8A"
-        app:layout_constraintTop_toBottomOf="@+id/buttonbuilding8A"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.297"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.928"
         tools:visibility="invisible" />
-
 
     <Button
         android:id="@+id/buttonbuilding1"
         android:layout_width="84dp"
         android:layout_height="39dp"
-        android:layout_marginStart="37dp"
-        android:layout_marginTop="51dp"
         android:layout_marginEnd="17dp"
         android:layout_marginBottom="123dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@+id/buttonbuilding4"
-        app:layout_constraintEnd_toStartOf="@+id/buttonGolombGate"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.106"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintVertical_bias="0.079"
         tools:visibility="invisible" />
 
     <Button
         android:id="@+id/buttonbuilding2"
-        android:layout_width="69dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="35dp"
+        android:layout_width="66dp"
+        android:layout_height="28dp"
         android:layout_marginEnd="49dp"
         android:layout_marginBottom="80dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@+id/buttonbuilding3B"
-        app:layout_constraintEnd_toStartOf="@+id/buttonGolombGate"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.121"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonbuilding1"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.182"
         tools:visibility="invisible" />
 
     <Button
@@ -93,189 +106,179 @@
         app:layout_constraintEnd_toStartOf="@+id/buttonbuilding4"
         app:layout_constraintStart_toStartOf="@+id/buttonbuilding3B"
         app:layout_constraintTop_toBottomOf="@+id/buttonbuilding3B"
-        tools:ignore="MissingConstraints"
         tools:visibility="invisible" />
+
 
     <Button
         android:id="@+id/buttonbuilding3B"
         android:layout_width="41dp"
         android:layout_height="28dp"
-        android:layout_marginStart="33dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="19dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@+id/buttonbuilding3A"
-        app:layout_constraintEnd_toStartOf="@+id/buttonbuilding4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.101"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonbuilding2"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.322"
         tools:visibility="invisible" />
 
     <Button
         android:id="@+id/buttonbuilding4"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="276dp"
+        android:layout_width="37dp"
+        android:layout_height="34dp"
         android:layout_marginBottom="298dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@+id/buttonbuilding8B"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonbuilding3B"
-        app:layout_constraintTop_toBottomOf="@+id/buttonbuilding1"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintHorizontal_bias="0.243"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.521"
         tools:visibility="invisible" />
-
 
     <Button
         android:id="@+id/buttonbuilding5"
         android:layout_width="54dp"
         android:layout_height="36dp"
-        android:layout_marginStart="123dp"
         android:layout_marginEnd="128dp"
         android:layout_marginBottom="7dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@+id/buttoncafeteria"
-        app:layout_constraintEnd_toStartOf="@+id/buttonstore"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.528"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonGolombGate"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.597"
         tools:visibility="invisible" />
 
     <Button
         android:id="@+id/buttonbuilding6"
         android:layout_width="42dp"
         android:layout_height="39dp"
-        android:layout_marginStart="67dp"
-        android:layout_marginEnd="65dp"
         android:layout_marginBottom="9dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@+id/buttonclub"
-        app:layout_constraintEnd_toEndOf="@+id/buttonbuilding7"
-        app:layout_constraintHorizontal_bias="0.92"
-        app:layout_constraintStart_toEndOf="@+id/buttonlibrary"
-        app:layout_constraintTop_toBottomOf="@+id/buttonstore"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.704"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.639"
         tools:visibility="invisible" />
-
 
     <Button
         android:id="@+id/buttonbuilding7"
-        android:layout_width="25dp"
-        android:layout_height="108dp"
+        android:layout_width="38dp"
+        android:layout_height="109dp"
         android:layout_marginTop="19dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginBottom="20dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@+id/buttonbuilding8B"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonclub"
-        app:layout_constraintTop_toTopOf="@+id/buttonbuilding5"
-        app:layout_constraintVertical_bias="0.0"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintHorizontal_bias="0.909"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.673"
         tools:visibility="invisible" />
 
     <Button
         android:id="@+id/buttonbuilding8A"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="99dp"
+        android:layout_width="39dp"
+        android:layout_height="25dp"
         android:layout_marginEnd="11dp"
         android:layout_marginBottom="29dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@+id/buttonHoffinGate"
-        app:layout_constraintEnd_toStartOf="@+id/buttonbuilding8C"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.313"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonbuilding8B"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.881"
         tools:visibility="invisible" />
 
     <Button
         android:id="@+id/buttonbuilding8B"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="103dp"
+        android:layout_width="23dp"
+        android:layout_height="26dp"
         android:layout_marginEnd="17dp"
         android:layout_marginBottom="17dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@+id/buttonbuilding8A"
-        app:layout_constraintEnd_toStartOf="@+id/buttonbuilding8C"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.314"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonbuilding4"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.793"
         tools:visibility="invisible" />
 
     <Button
         android:id="@+id/buttonbuilding8C"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="228dp"
-        android:layout_marginBottom="121dp"
+        android:layout_width="33dp"
+        android:layout_height="30dp"
         android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonbuilding8B"
-        app:layout_constraintTop_toBottomOf="@+id/buttonlibrary"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintHorizontal_bias="0.375"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.808"
         tools:visibility="invisible" />
 
     <Button
         android:id="@+id/buttonlibrary"
         android:layout_width="33dp"
         android:layout_height="35dp"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="374dp"
         android:layout_marginEnd="132dp"
         android:layout_marginBottom="147dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@+id/buttonbuilding8C"
-        app:layout_constraintEnd_toStartOf="@+id/buttonbuilding7"
-        app:layout_constraintStart_toStartOf="@+id/buttonbuilding2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.674"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintVertical_bias="0.684"
         tools:visibility="invisible" />
 
     <Button
         android:id="@+id/buttonstore"
         android:layout_width="28dp"
         android:layout_height="21dp"
-        android:layout_marginEnd="82dp"
         android:layout_marginBottom="6dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@+id/buttonbuilding6"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonbuilding5"
-        app:layout_constraintTop_toBottomOf="@+id/buttonFichmanGate"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintHorizontal_bias="0.788"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.573"
         tools:visibility="invisible" />
 
     <Button
         android:id="@+id/buttoncafeteria"
-        android:layout_width="38dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="61dp"
+        android:layout_width="44dp"
+        android:layout_height="29dp"
         android:layout_marginEnd="61dp"
-        android:layout_marginBottom="247dp"
         android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonbuilding6"
-        app:layout_constraintStart_toStartOf="@+id/buttonbuilding8B"
-        app:layout_constraintTop_toBottomOf="@+id/buttonaguda"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.636"
         tools:visibility="invisible" />
 
     <Button
         android:id="@+id/buttonaguda"
         android:layout_width="39dp"
         android:layout_height="28dp"
-        android:layout_marginTop="411dp"
         android:layout_marginEnd="52dp"
         android:layout_marginBottom="11dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@+id/buttoncafeteria"
-        app:layout_constraintEnd_toStartOf="@+id/buttonclub"
-        app:layout_constraintStart_toEndOf="@+id/buttonbuilding5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.581"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintVertical_bias="0.593"
         tools:visibility="invisible" />
 
     <Button
@@ -283,29 +286,28 @@
         android:layout_width="40dp"
         android:layout_height="25dp"
         android:layout_marginEnd="17dp"
-        android:layout_marginBottom="226dp"
         android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonbuilding7"
-        app:layout_constraintStart_toEndOf="@+id/buttonaguda"
-        app:layout_constraintTop_toBottomOf="@+id/buttonbuilding6"
-        tools:ignore="MissingConstraints"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.779"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.685"
         tools:visibility="invisible" />
 
-    <Button
-        android:id="@+id/btnBack"
-        android:layout_width="109dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="9dp"
-        android:layout_marginEnd="7dp"
-        android:layout_marginBottom="11dp"
-        android:text="Back"
+    <TextView
+        android:id="@+id/outOfBounds"
+        android:layout_width="391dp"
+        android:layout_height="25dp"
+        android:hint="@string/out_of_bounds_can_t_show_current_location"
+        android:visibility="gone"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonHoffinGate"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonbuilding3A"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.99" />
 
     <ImageView
         android:id="@+id/location_icon"
@@ -315,6 +317,6 @@
         android:src="@drawable/you_are_here"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="90dp" />
+        tools:layout_editor_absoluteY="90dp"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
