--- a/app/src/main/res/layout/navigation_fragment.xml
+++ b/app/src/main/res/layout/navigation_fragment.xml
@@ -16,73 +16,77 @@
             android:layout_height="match_parent"
             android:layout_width="match_parent">
 
-        <Button
-            android:id="@+id/buttonAdmin"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:backgroundTint="@color/gray"
-            android:text="Admin Manager"
-            android:visibility="gone"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
             <Button
                 android:id="@+id/btnStartNav"
-                android:layout_width="153dp"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:layout_marginTop="20dp"
+                android:layout_width="220dp"
+                android:layout_height="70dp"
                 android:backgroundTint="@color/gray"
-                android:text="Start Navigation"
-                app:layout_constraintTop_toBottomOf="@id/buttonAdmin"
+                android:text="@string/start_navigation"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/btnNews"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:layout_width="200dp"
+                android:layout_height="60dp"
                 android:layout_marginTop="20dp"
                 android:backgroundTint="@color/gray"
-                android:text="HIT Newsletter"
-                app:layout_constraintTop_toBottomOf="@id/btnStartNav"
+                android:textSize="15sp"
+                android:text="@string/hit_newsletter"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/btnStartNav" />
+
+            <Button
+                android:id="@+id/buttonAdmin"
+                android:layout_width="180dp"
+                android:layout_height="50dp"
+                android:backgroundTint="@color/gray"
+                android:text="@string/admin_manager"
+                android:textColor="@color/white"
+                android:textSize="13sp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnNews"
+                app:layout_constraintVertical_bias="0.097" />
 
             <Button
                 android:id="@+id/btnLogout"
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:layout_marginTop="20dp"
                 android:backgroundTint="@color/gray"
-                android:text="Logout"
-                app:layout_constraintTop_toBottomOf="@id/btnNews"
+                android:text="@string/logout"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.022"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@+id/buttonAdmin"
+                app:layout_constraintVertical_bias="0.983" />
+
+            <ImageView
+                android:layout_width="137dp"
+                android:layout_height="104dp"
+                android:layout_marginTop="4dp"
+                android:contentDescription="@string/hit_logo"
+                android:scaleType="centerCrop"
+                android:src="@drawable/hitlogo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
-
-
-
-
-<!--    <Button-->
-<!--        android:id="@+id/btnLogout"-->
-<!--        android:layout_width="120dp"-->
-<!--        android:layout_height="43dp"-->
-<!--        android:layout_marginTop="20dp"-->
-<!--        android:backgroundTint="@color/btnsAndInput"-->
-<!--        android:text="Logout"-->
-<!--        android:textColor="@color/black"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/btnNews"-->
-<!--        tools:backgroundTint="@color/white"-->
-<!--         />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
