--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:drawableStart="@drawable/baseline_arrow_back_ios_24"
+        app:drawableStartCompat="@drawable/baseline_arrow_back_ios_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -58,9 +58,9 @@
                 android:id="@+id/register_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Register"
+                android:text="@string/register"
                 android:textColor="@color/white"
-                android:textSize="40dp"
+                android:textSize="40sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
@@ -70,9 +70,8 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/red"
                android:layout_marginTop="50dp"
-                android:layout_marginLeft="10dp"
-                android:text="*Invalid email or password, please use an existing email and
-a password of at least 6 characters"
+                android:layout_marginStart="10dp"
+                android:text="@string/invalid_email_or_password_please_use_an_existing_email_and_a_password_of_at_least_6_characters"
                 android:visibility="gone"
                app:layout_constraintTop_toTopOf="@+id/register_text"
                 app:layout_constraintBottom_toTopOf="@id/reg_email_text_input"
@@ -84,8 +83,8 @@ a password of at least 6 characters"
                 android:layout_height="wrap_content"
                 android:textColor="@color/red"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="*Passwords do not match"
+                android:layout_marginStart="10dp"
+                android:text="@string/passwords_do_not_match"
                 android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@id/reg_email_text_input"
                 app:layout_constraintStart_toStartOf="parent"
@@ -95,8 +94,7 @@ a password of at least 6 characters"
                 android:id="@+id/reg_email_text_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Email"
-
+                android:hint="@string/email"
                 app:boxStrokeColor="@color/black"
                 app:boxBackgroundColor="@color/btnsAndInput"
                 android:textColorHint="@color/black"
@@ -128,7 +126,7 @@ a password of at least 6 characters"
                 android:id="@+id/reg_password_text_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Password"
+                android:hint="@string/password"
                 app:cursorColor="@color/black"
                 android:imeOptions="actionDone"
                 android:layout_marginTop="30dp"
@@ -157,7 +155,7 @@ a password of at least 6 characters"
                 android:id="@+id/reg_confirm_password_text_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Confirm password"
+                android:hint="@string/confirm_password"
                 app:startIconDrawable="@drawable/check_password"
                 app:startIconTint="@color/black"
                 android:layout_marginTop="30dp"
@@ -188,7 +186,7 @@ a password of at least 6 characters"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/btnsAndInput"
                 android:textColor="@color/black"
-                android:text="Register"
+                android:text="@string/register"
                 android:layout_marginTop="15dp"
                 app:layout_constraintTop_toBottomOf="@+id/reg_confirm_password_text_input"
                 app:layout_constraintStart_toStartOf="parent"
@@ -198,9 +196,9 @@ a password of at least 6 characters"
                 android:id="@+id/sign_in_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Already have an account?"
+                android:text="@string/already_have_an_account"
                 android:textColor="@color/white"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -208,9 +206,9 @@ a password of at least 6 characters"
                 android:id="@+id/sigin_in_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="Sign in"
-                android:textSize="20dp"
+                android:layout_marginStart="10dp"
+                android:text="@string/sign_in"
+                android:textSize="20sp"
                 android:textColor="@color/blue_link"
                 android:textStyle="italic"
                 app:layout_constraintStart_toEndOf="@id/sign_in_text"
