--- a/app/src/main/res/layout/detail_location_info.xml
+++ b/app/src/main/res/layout/detail_location_info.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:background="@drawable/background"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".Admin.all_location.detail_location.DetailLocationInfo">
+    tools:context=".admin.all_location.detail_location.DetailLocationInfo">
 
 <androidx.cardview.widget.CardView
     android:layout_width="match_parent"
