--- a/app/src/main/res/layout/start_nav_fragment.xml
+++ b/app/src/main/res/layout/start_nav_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context="com.example.locations.UI.ui_activity.StartNavFragment">
+    tools:context="com.example.locations.ui.ui_activity.StartNavFragment">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
