--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="blue_link">#319DF3</color>
     <color name="modal_window">#A3313131</color>
     <color name="gray">#494646</color>
+    <color name="baby_blue">#C8F1F6</color>
+    <color name="medium_blue">#D767BEC1</color>
+    <color name="logo_blue">#018186</color>
 </resources>
