--- a/app/src/main/res/layout/add_location.xml
+++ b/app/src/main/res/layout/add_location.xml
@@ -1,29 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".admin.all_location.single_location.AddLocationFragment"
+    android:layout_margin="16dp"
+    android:background="@color/baby_blue"
     android:orientation="vertical"
-    android:layout_margin="16dp">
+    tools:context=".admin.all_location.single_location.AddLocationFragment">
 
     <TextView
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="4dp"
         app:drawableStartCompat="@drawable/baseline_arrow_forward_ios_24"
-        app:drawableTint="@color/white"
+        app:drawableTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
         android:id="@+id/coordText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text= "@string/admin_manager"
+        android:layout_marginBottom="15dp"
+        android:text="@string/admin_manager"
+        android:textColor="@color/black"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -36,6 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:text="@string/accuracy"
+        android:textColor="@color/black"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -43,15 +49,17 @@
         app:layout_constraintTop_toBottomOf="@id/btnBack" />
 
     <TextView
-    android:id="@+id/pick_img_text"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/pick_an_image"
-    android:textSize="20sp"
-    android:layout_marginTop="15dp"
-    app:layout_constraintTop_toBottomOf="@id/accuracy"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"/>
+        android:id="@+id/pick_img_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="@string/pick_an_image"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/accuracy" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="200dp"
@@ -60,15 +68,14 @@
         app:cardCornerRadius="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/pick_img_text"
-        >
+        app:layout_constraintTop_toBottomOf="@id/pick_img_text">
 
         <ImageView
-           android:id="@+id/result_img"
+            android:id="@+id/result_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/camera"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/camera" />
 
     </androidx.cardview.widget.CardView>
 
@@ -79,83 +86,83 @@
         android:layout_marginTop="20dp"
         android:text="@string/name"
         android:textSize="20sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toBottomOf="@id/card_view"
+        app:layout_constraintTop_toBottomOf="@id/card_view"
         app:layout_constraintVertical_bias="0.513" />
+
     <TextView
         android:id="@+id/coordinatesView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/coordinates"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nameView"
-        />
+        app:layout_constraintTop_toBottomOf="@id/nameView" />
 
     <TextView
         android:id="@+id/azimuthView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="@string/azimuth"
+        android:textColor="@color/black"
         android:textSize="18sp"
-       android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toBottomOf="@id/coordinatesView"
+        app:layout_constraintTop_toBottomOf="@id/coordinatesView"
         app:layout_constraintVertical_bias="0.618" />
 
     <com.google.android.material.textfield.TextInputLayout
-       android:id="@+id/place_name_edit_text"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
+        android:id="@+id/place_name_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-       android:hint="@string/enter_place_name"
-        app:hintTextColor="@color/btnsAndInput"
-
-        app:boxStrokeColor="@color/btnsAndInput"
-        app:startIconDrawable="@drawable/ic_house"
-       app:layout_constraintStart_toStartOf="parent"
+        android:hint="@string/enter_place_name"
+        app:boxStrokeColor="@color/black"
+        android:textColor="@color/black"
+        app:hintTextColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintTop_toBottomOf="@id/azimuthView">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/azimuthView"
+        app:startIconDrawable="@drawable/ic_house">
 
-       <com.google.android.material.textfield.TextInputEditText
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-   </com.google.android.material.textfield.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/btnSavePlace"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/save_data"
-        android:backgroundTint="@color/btnsAndInput"
-        android:textColor="@color/black"
-        android:padding="10dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:backgroundTint="@color/medium_blue"
+        android:padding="10dp"
+        android:text="@string/save_data"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@id/btnViewList"
-        app:layout_constraintTop_toBottomOf="@+id/place_name_edit_text"
-        app:layout_constraintHorizontal_chainStyle="spread"/>
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/place_name_edit_text" />
 
     <Button
         android:id="@+id/btnViewList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/view_list"
-        android:textColor="@color/black"
-        android:padding="10dp"
         android:layout_marginTop="20dp"
-        android:backgroundTint="@color/btnsAndInput"
-        app:layout_constraintStart_toEndOf="@id/btnSavePlace"
+        android:backgroundTint="@color/medium_blue"
+        android:padding="10dp"
+        android:text="@string/view_list"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btnSavePlace"
         app:layout_constraintTop_toBottomOf="@+id/place_name_edit_text" />
-
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
