--- a/app/src/main/res/layout/all_locations_layout.xml
+++ b/app/src/main/res/layout/all_locations_layout.xml
@@ -42,12 +42,15 @@
                 android:id="@+id/btn_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="4dp"
+                app:drawableTint="@color/black"
                 android:textSize="20sp"
-                app:drawableStartCompat="@drawable/baseline_arrow_back_ios_24"
-                app:layout_constraintStart_toStartOf="parent"
+                app:drawableStartCompat="@drawable/baseline_arrow_forward_ios_24"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/searchEditTextLayout"
                 android:layout_width="match_parent"
@@ -84,7 +87,7 @@
         android:layout_margin="20dp"
         app:cardCornerRadius="10dp"
         android:visibility="gone"
-        app:cardBackgroundColor="@color/modal_window"
+        app:cardBackgroundColor="@color/baby_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,6 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:text="@string/are_you_sure_you_want_to_delete_this_location"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -123,6 +127,8 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="25dp"
                     android:text="@string/yes"
+                    android:backgroundTint="#D767BEC1"
+                    android:textColor="@color/white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/warning_text"
@@ -135,6 +141,8 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="25dp"
                     android:text="@string/no"
+                    android:backgroundTint="#018186"
+                    android:textColor="@color/white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/btnConfirmDelete" />
