--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/back_ground"
-    android:background="@drawable/background"
+    android:background="@color/background_white"
+    android:backgroundTint="@color/background_white"
     tools:context=".ui.ui_activity.HomePageFragment">
 
     <androidx.cardview.widget.CardView
@@ -13,23 +14,7 @@
         android:layout_height="match_parent"
         android:backgroundTint="@color/background_white">
     </androidx.cardview.widget.CardView>
-    <androidx.cardview.widget.CardView
-        android:layout_width="120dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:cardCornerRadius="15dp">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/hitlogo"
-            android:scaleType="centerCrop" />
-
-    </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -37,7 +22,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         app:cardCornerRadius="15dp"
-
         app:cardBackgroundColor="@color/modal_window"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,17 +29,22 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="330dp"
-            android:layout_height="480dp"
-            android:background="@color/modal_window"
-            android:padding="16dp">
+            android:layout_width="364dp"
+            android:layout_height="706dp"
+            android:background="#C8F1F6"
+            android:padding="16dp"
+            android:touchscreenBlocksFocus="false">
 
             <TextView
                 android:id="@+id/welcome_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:shadowColor="#018085"
                 android:text=""
-                android:textColor="@color/white"
+                android:paddingTop="20dp"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:textColor="@color/black"
                 android:textSize="25sp"
                 android:textStyle="italic"
                 app:layout_constraintTop_toTopOf="parent"
@@ -65,31 +54,42 @@
                 android:id="@+id/buttonLogin"
                 android:layout_width="149dp"
                 android:layout_height="61dp"
-                android:backgroundTint="@color/btnsAndInput"
+                android:backgroundTint="#D767BEC1"
+                android:textColor="@color/white"
                 android:text="@string/sign_in"
-                android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.503"
+                app:layout_constraintHorizontal_bias="0.502"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.63" />
+                app:layout_constraintVertical_bias="0.608" />
 
             <Button
                 android:id="@+id/buttonRegister"
                 android:layout_width="149dp"
                 android:layout_height="61dp"
                 android:layout_marginTop="28dp"
-                android:backgroundTint="@color/btnsAndInput"
+                android:backgroundTint="#018186"
+                android:textColor="@color/white"
                 android:text="@string/register"
-                android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.503"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/buttonLogin" />
 
+            <ImageView
+                android:layout_width="124dp"
+                android:layout_height="81dp"
+                android:layout_marginBottom="11dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/hitlogo"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
+                app:layout_constraintVertical_bias="0.978" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
