--- a/app/src/main/res/layout/navigation_fragment.xml
+++ b/app/src/main/res/layout/navigation_fragment.xml
@@ -20,9 +20,9 @@
                 android:id="@+id/btnStartNav"
                 android:layout_width="220dp"
                 android:layout_height="70dp"
-                android:backgroundTint="@color/gray"
-                android:text="@string/start_navigation"
+                android:backgroundTint="#018186"
                 android:textColor="@color/white"
+                android:text="@string/start_navigation"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -35,10 +35,10 @@
                 android:layout_width="200dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="20dp"
-                android:backgroundTint="@color/gray"
+                android:backgroundTint="#D767BEC1"
+                android:textColor="@color/white"
                 android:textSize="15sp"
                 android:text="@string/hit_newsletter"
-                android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
@@ -74,16 +74,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/buttonAdmin"
                 app:layout_constraintVertical_bias="0.983" />
 
-            <ImageView
-                android:layout_width="137dp"
-                android:layout_height="104dp"
-                android:layout_marginTop="4dp"
-                android:contentDescription="@string/hit_logo"
-                android:scaleType="centerCrop"
-                android:src="@drawable/hitlogo"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
