--- a/app/src/main/res/layout/start_nav_fragment.xml
+++ b/app/src/main/res/layout/start_nav_fragment.xml
@@ -30,21 +30,23 @@
                 android:layout_width="200dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="20dp"
-                android:backgroundTint="@color/gray"
+                android:backgroundTint="@color/medium_blue"
                 android:text="@string/choose_from_map"
                 android:textColor="@color/white"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.502"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.612" />
 
             <Button
                 android:id="@+id/btnList"
                 android:layout_width="200dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="20dp"
-                android:backgroundTint="@color/gray"
+                android:backgroundTint="@color/logo_blue"
                 android:text="@string/choose_from_list"
                 android:textColor="@color/white"
                 android:textSize="15sp"
